# yip

./: .gitignore  .hlint.yaml  README.md  cabal.project.freeze  flake.nix  yip.cabal  yip.nix
app/: Command.hs  Main.hs  Parser.hs
src/: Command.hs  Main.hs  Parser.hs
